tests/ui/borrowck/disallow-possibly-uninitialized.classic.stderr
error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/disallow-possibly-uninitialized.rs:11:5
   |
LL |     t.0 = 1;
   |     ^^^^^^^
   |
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/disallow-possibly-uninitialized.rs:17:5
   |
LL |     t.1 = 1;
   |     ^^^^^^^
   |
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/disallow-possibly-uninitialized.rs:23:5
   |
LL |     t.0 = 1;
   |     ^^^^^^^
   |
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/disallow-possibly-uninitialized.rs:28:5
   |
LL |     t.0 = 1;
   |     ^^^^^^^
   |
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/disallow-possibly-uninitialized.rs:11:5
   |
LL |     let mut t: (u64, u64);
   |         ----- binding declared here but left uninitialized
LL |     t.0 = 1;
   |     ^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/disallow-possibly-uninitialized.rs:17:5
   |
LL |     let mut t: (u64, u64);
   |         ----- binding declared here but left uninitialized
LL |     t.1 = 1;
   |     ^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/disallow-possibly-uninitialized.rs:23:5
   |
LL |     let mut t: (u64, u64);
   |         ----- binding declared here but left uninitialized
LL |     t.0 = 1;
   |     ^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/disallow-possibly-uninitialized.rs:28:5
   |
LL |     let mut t: (u64,);
   |         ----- binding declared here but left uninitialized
LL |     t.0 = 1;
   |     ^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0381, E0658.
For more information about an error, try `rustc --explain E0381`.
